# luaur

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ROADMAP.md
crates/luaur/: Cargo.toml
crates/luaur-analysis/: Cargo.toml
crates/luaur-analysis/src/functions/: check_type_match.rs  filter_map.rs  follow_type_alt_e.rs  follow_type_pack_alt_h.rs  get_name_type.rs  mk_name_topo_sort_statements_alt_h.rs  paged_allocate.rs  paged_deallocate.rs  paged_freeze.rs  paged_unfreeze.rs  unwrap_lazy.rs
crates/luaur-analysis/src/methods/: data_flow_graph_builder_join_bindings.rs  data_flow_graph_builder_join_props.rs  frontend_load_definition_file.rs  global_types_global_types.rs  internal_compiler_error_internal_compiler_error_error_alt_b.rs  internal_compiler_error_internal_compiler_error_error_alt_c.rs  internal_compiler_error_what.rs  lint_table_operations_check_indexer.rs  magic_format_handle_old_solver.rs  magic_format_type_check.rs  mod.rs  module_clone_public_interface.rs  promote_type_levels_traverse.rs  recursion_limit_exception_recursion_limit_exception.rs  time_limit_error_time_limit_error.rs  txn_log_empty.rs  txn_log_inverse.rs  txn_log_new.rs  txn_log_push_seen_txn_log_alt_c.rs  txn_log_txn_log_txn_log_alt_b.rs  txn_log_txn_log_txn_log_alt_c.rs  type_checker_check_type_infer_alt_o.rs  type_checker_merge.rs  type_checker_mk_unifier.rs  type_checker_refine_l_value.rs  type_checker_try_unify_type_infer_alt_c.rs  typed_allocator_append_block.rs  typed_allocator_free.rs  typed_allocator_typed_allocator_typed_allocator.rs  unifier_make_child_unifier.rs  unifier_try_unify_variadics.rs  user_cancel_error_user_cancel_error.rs
crates/luaur-analysis/src/records/: find_cyclic_types.rs  global_types.rs  internal_compiler_error.rs  txn_log.rs  typed_allocator.rs
crates/luaur-analyze-cli/: Cargo.toml
crates/luaur-analyze-cli/src/functions/: assertion_handler.rs
crates/luaur-ast/: Cargo.toml
crates/luaur-ast-cli/: Cargo.toml
crates/luaur-ast-cli/src/functions/: assertion_handler.rs
crates/luaur-ast/src/methods/: allocator_allocate.rs  allocator_allocator_allocator.rs  allocator_allocator_allocator_alt_c.rs  ast_attr_as_attr.rs  ast_expr_call_visit.rs  ast_expr_function_ast_expr_function.rs  ast_expr_if_else_ast_expr_if_else.rs  ast_expr_if_else_visit.rs  ast_expr_interp_string_ast_expr_interp_string.rs  ast_expr_local_ast_expr_local.rs  ast_expr_table_ast_expr_table.rs  ast_expr_type_assertion_ast_expr_type_assertion.rs  ast_generic_type_pack_ast_generic_type_pack.rs  ast_generic_type_pack_visit.rs  ast_generic_type_visit.rs  ast_stat_class_ast_stat_class.rs  ast_stat_for_in_visit.rs  ast_stat_for_visit.rs  ast_stat_local_visit.rs  ast_stat_type_alias_visit.rs  ast_type_error_ast_type_error.rs  ast_type_pack_variadic_visit.rs  cst_expr_index_expr_cst_expr_index_expr.rs  cst_expr_interp_string_cst_expr_interp_string.rs  cst_expr_type_assertion_cst_expr_type_assertion.rs  cst_generic_type_cst_generic_type.rs  cst_generic_type_pack_cst_generic_type_pack.rs  cst_stat_assign_cst_stat_assign.rs  cst_stat_for_cst_stat_for.rs  cst_type_pack_generic_cst_type_pack_generic.rs  cst_type_singleton_string_cst_type_singleton_string.rs  printer_advance.rs  printer_maybe_advance_and_write.rs  printer_visualize_block_pretty_printer.rs  printer_write_end.rs
crates/luaur-ast/src/records/: page.rs
crates/luaur-bytecode/: Cargo.toml
crates/luaur-bytecode/src/methods/: bytecode_builder_dump_current_function.rs  bytecode_builder_try_get_userdata_type_name.rs
crates/luaur-cli-lib/: Cargo.toml
crates/luaur-cli-lib/src/functions/: traverse_directory_rec_file_utils_alt_b.rs
crates/luaur-cli-test/: Cargo.toml
crates/luaur-cli-test/src/functions/: init_system.rs  is_method_or_function_char.rs  profiler_dump.rs  profiler_trigger.rs
crates/luaur-code-gen/: Cargo.toml
crates/luaur-code-gen/src/functions/: allocate_pages_impl_code_allocator.rs  call_epilog_c.rs  call_fallback.rs  call_prolog.rs  compile_code_gen_context.rs  compile_code_gen_context_alt_b.rs  create_code_gen_context_alt_c.rs  destroy_native_proto_exec_data.rs  destroy_shared_code_gen_context.rs  execute_dupclosure.rs  execute_forgprep.rs  execute_getglobal.rs  execute_gettableks.rs  execute_getvarargs_const.rs  execute_getvarargs_mult_ret.rs  execute_namecall.rs  execute_prepvarargs.rs  execute_setlist.rs  (+27 more)
crates/luaur-common/: Cargo.toml
crates/luaur-common/src/: lib.rs  string_utils_tests.rs  strtod_shim.rs  wasm_libc.rs
crates/luaur-compiler/: Cargo.toml
crates/luaur-config/: Cargo.toml
crates/luaur-e2e/: Cargo.toml
crates/luaur-reduce-cli/: Cargo.toml
crates/luaur-repl-cli/: Cargo.toml
crates/luaur-require/: Cargo.toml
crates/luaur-rt/: Cargo.toml
crates/luaur-rt/src/: async.rs  chunk.rs  conversion.rs  error.rs  exec_raw.rs  ffi.rs  function.rs  interrupt.rs  lib.rs  luau_ext.rs  memory.rs  state.rs  string.rs  table.rs  tests.rs  typecheck.rs  userdata.rs  value.rs
crates/luaur-rt/tests/: ATTRIBUTION.md  error_position.rs  fuzz_generated.rs  luaur_typecheck.rs  miri_issue6.rs  mlua_chunk.rs  mlua_conversion.rs  mlua_error.rs  mlua_function.rs  mlua_luau.rs  mlua_multi.rs  mlua_send_async.rs  mlua_string.rs  mlua_table.rs  mlua_userdata.rs  mlua_value.rs  os_time_overflow.rs  reusable_checker.rs  stdlib_overflow.rs
crates/luaur-unit-test/: Cargo.toml
crates/luaur-vm/: Cargo.toml
crates/luaur-web/: Cargo.toml
crates/luaur-web/src/: wasm.rs
crates/luaur/src/: lib.rs
fuzz/: CORPUS_ATTRIBUTION.md  Cargo.toml  README.md  build.rs
fuzz/fuzz_targets/: api.rs  compile.rs  determinism.rs  gcstress.rs  gen_corpus.rs  host.rs  metamorphic.rs  number.rs  optdiff.rs  roundtrip.rs  run.rs  serde_roundtrip.rs  spans.rs  splice.rs  standalone.rs  structured.rs  typeck.rs  typeck_defs.rs  typeck_typed.rs
fuzz/scripts/: fetch_corpus.sh  replay_crashes.sh  run_afl.sh  triage_afl_crashes.sh  wasm_fuzz.sh  wasm_replay.mjs
fuzz/seeds/determinism/: func  table
fuzz/seeds/number/: bin  float  hex
fuzz/seeds/typeck/: control
fuzz/seeds/typeck_defs/: alias  annot
fuzz/src/: api_gen.rs  lib.rs
(+283 files in other folders)
