[workspace]
resolver = "2"
members = [
    "crates/luaur",
    "crates/luaur-analysis",
    "crates/luaur-analyze-cli",
    "crates/luaur-ast",
    "crates/luaur-ast-cli",
    "crates/luaur-bytecode",
    "crates/luaur-bytecode-cli",
    "crates/luaur-cli-lib",
    "crates/luaur-cli-test",
    "crates/luaur-code-gen",
    "crates/luaur-common",
    "crates/luaur-compile-cli",
    "crates/luaur-compiler",
    "crates/luaur-config",
    "crates/luaur-conformance",
    "crates/luaur-e2e",
    "crates/luaur-reduce-cli",
    "crates/luaur-repl-cli",
    "crates/luaur-require",
    "crates/luaur-rt",
    "crates/luaur-rt-derive",
    "crates/luaur-unit-test",
    "crates/luaur-vm",
    "crates/luaur-web",
    "examples/*",
]
# The cargo-fuzz crate is its own (nightly/libfuzzer) workspace — keep it out of
# the main one so normal `cargo build`/CI never pulls the fuzz toolchain.
exclude = ["fuzz"]

[profile.release]
lto = "fat"
codegen-units = 1

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Pawel Jankiewicz <p.jankiewicz@gmail.com>"]
repository = "https://github.com/pjankiewicz/luaur"
rust-version = "1.80"
keywords = ["luau", "lua", "interpreter", "compiler", "transpile"]
