# AFL fuzz crate — a Rust port of Luau's `fuzz/` suite, driven by AFL (afl.rs).
# Detached from the parent workspace (own `[workspace]`) and never published, so
# the AFL toolchain it can use does not touch the normal build.
#
# Two build modes:
#   * default (`afl-runtime`)        — links the AFL fork-server runtime; built
#                                       and driven via `cargo afl build` /
#                                       `cargo afl fuzz` (real-time TUI). See
#                                       `scripts/run_afl.sh` / `make fuzz-typeck`.
#   * `--no-default-features`        — a STANDALONE binary needing NO AFL /
#                                       nightly / sanitizer toolchain. Replays
#                                       corpus/crash files passed as args, reads
#                                       one input from stdin (LUAUR_FUZZ_STDIN=1),
#                                       or generates LUAUR_FUZZ_ITERS pseudo-random
#                                       inputs from LUAUR_FUZZ_SEED — for smoke
#                                       fuzzing in plain `cargo` / CI.
[package]
name = "luaur-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
afl = { version = "0.18", optional = true }
luaur-rt = { path = "../crates/luaur-rt", features = ["typecheck"] }
luaur-ast = { path = "../crates/luaur-ast" }
# For `install_afl_panic_hook`: detect the compiler's intentional `CompileError`
# throw (panic_any, caught by compile()) so AFL doesn't treat it as a crash.
luaur-compiler = { path = "../crates/luaur-compiler" }

[features]
# `afl-runtime` (default) links the AFL fork-server runtime via `cargo afl build`
# / `cargo afl fuzz`. Build with `--no-default-features` for the standalone,
# toolchain-free binary described above.
default = ["afl-runtime"]
afl-runtime = ["dep:afl"]

# Detach from the parent workspace so the AFL instrumentation is scoped here only.
[workspace]

[profile.release]
debug = 1
# Fuzz in optimized builds for throughput, but keep the assertion layer ON:
# luaur's `LUAU_ASSERT`s (and Rust's overflow/bounds checks) are gated on
# `debug_assertions`, and they catch corruption a bare crash check would miss
# (they surfaced the `number` base-contract bug). Plain `--release` would be fast
# but blind; this profile is fast AND checked.
debug-assertions = true
overflow-checks = true

[[bin]]
name = "compile"
path = "fuzz_targets/compile.rs"
test = false
doc = false
bench = false

[[bin]]
name = "run"
path = "fuzz_targets/run.rs"
test = false
doc = false
bench = false

[[bin]]
name = "typeck"
path = "fuzz_targets/typeck.rs"
test = false
doc = false
bench = false

[[bin]]
name = "number"
path = "fuzz_targets/number.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured"
path = "fuzz_targets/structured.rs"
test = false
doc = false
bench = false

[[bin]]
name = "typeck_defs"
path = "fuzz_targets/typeck_defs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "typeck_typed"
path = "fuzz_targets/typeck_typed.rs"
test = false
doc = false
bench = false

[[bin]]
name = "determinism"
path = "fuzz_targets/determinism.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "splice"
path = "fuzz_targets/splice.rs"
test = false
doc = false
bench = false

[[bin]]
name = "optdiff"
path = "fuzz_targets/optdiff.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metamorphic"
path = "fuzz_targets/metamorphic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "spans"
path = "fuzz_targets/spans.rs"
test = false
doc = false
bench = false

# Plain tool (no AFL harness): distills a seed corpus from the generators.
[[bin]]
name = "gen_corpus"
path = "fuzz_targets/gen_corpus.rs"
test = false
doc = false
bench = false
