[package]
name = "luaur-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Luau type checker and type inference (Rust)."
keywords = ["luau", "lua", "typechecker", "inference", "types"]
categories = ["compilers", "development-tools"]

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-ast = { path = "../luaur-ast", version = "0.1.7" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.7" }
luaur-config = { path = "../luaur-config", version = "0.1.7" }
luaur-vm = { path = "../luaur-vm", version = "0.1.7" }

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]

# The page allocator's DebugLuauFreezeArena path uses VirtualAlloc/VirtualProtect
# on Windows (paged_allocate/freeze/unfreeze). Use windows-sys (raw Win32), as
# luaur-common does — the high-level `windows` crate was referenced but never
# declared, so Windows failed to build (E0433: cannot find crate `windows`).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory"] }
