[package]
name = "luaur-cli-test"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-ast = { path = "../luaur-ast", version = "0.1.7" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.7" }
luaur-cli-lib = { path = "../luaur-cli-lib", version = "0.1.7" }
luaur-code-gen = { path = "../luaur-code-gen", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.7" }
luaur-config = { path = "../luaur-config", version = "0.1.7" }
luaur-require = { path = "../luaur-require", version = "0.1.7" }
luaur-vm = { path = "../luaur-vm", version = "0.1.7" }
rustyline = "14"

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]
