[package]
name = "luaur-code-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Native (A64/X64) code generation for Luau (Rust)."
keywords = ["luau", "lua", "codegen", "jit", "assembler"]
categories = ["compilers"]

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-common = { path = "../luaur-common", version = "0.1.0" }
luaur-vm = { path = "../luaur-vm", version = "0.1.0" }

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]

# The JIT code-allocator's Windows path uses VirtualAlloc/VirtualFree/
# VirtualProtect and FlushInstructionCache/GetCurrentProcess. Use windows-sys
# (raw Win32), matching the rest of the workspace — the high-level `windows`
# crate was referenced but never declared (E0433: cannot find crate `windows`).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
