[package]
name = "luaur-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "End-to-end / integration test suite for luaur: exercises the CLI binaries and library API as a shipping product."
publish = false

# No library or binaries — this crate exists purely for its `tests/` integration suite.
[lib]
path = "src/lib.rs"

[dependencies]
luaur = { path = "../luaur", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }

[dev-dependencies]
luaur = { path = "../luaur", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"

# Pull in the CLI crates so cargo exposes their binaries to assert_cmd's
# `cargo_bin(..)` lookup (CARGO_BIN_EXE_* / target-dir discovery) deterministically.
luaur-repl-cli = { path = "../luaur-repl-cli", version = "0.1.7" }
luaur-analyze-cli = { path = "../luaur-analyze-cli", version = "0.1.7" }
luaur-ast-cli = { path = "../luaur-ast-cli", version = "0.1.7" }
luaur-compile-cli = { path = "../luaur-compile-cli", version = "0.1.7" }
luaur-bytecode-cli = { path = "../luaur-bytecode-cli", version = "0.1.7" }
luaur-reduce-cli = { path = "../luaur-reduce-cli", version = "0.1.7" }
