[package]
name = "luaur-repl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Interactive Luau REPL (Rust)."
keywords = ["luau", "lua", "repl", "interpreter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[lib]
crate-type = ["rlib"]

[[bin]]
name = "luaur"
path = "src/main.rs"

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-ast = { path = "../luaur-ast", version = "0.1.7" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.7" }
luaur-cli-lib = { path = "../luaur-cli-lib", version = "0.1.7" }
luaur-code-gen = { path = "../luaur-code-gen", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.7" }
luaur-config = { path = "../luaur-config", version = "0.1.7" }
luaur-require = { path = "../luaur-require", version = "0.1.7" }
luaur-vm = { path = "../luaur-vm", version = "0.1.7" }
rustyline = "14"

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]
