[package]
name = "luaur-unit-test"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
luaur-analysis = { path = "../luaur-analysis", version = "0.1.0" }
luaur-ast = { path = "../luaur-ast", version = "0.1.0" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.0" }
luaur-code-gen = { path = "../luaur-code-gen", version = "0.1.0" }
luaur-common = { path = "../luaur-common", version = "0.1.0" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.0" }
luaur-config = { path = "../luaur-config", version = "0.1.0" }
luaur-vm = { path = "../luaur-vm", version = "0.1.0" }

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen"]
