[package]
name = "luaur-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings to run and type-check Luau in the browser (Rust)."
keywords = ["luau", "lua", "wasm", "webassembly", "playground"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
luaur-analysis = { path = "../luaur-analysis", version = "0.1.7" }
luaur-ast = { path = "../luaur-ast", version = "0.1.7" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.7" }
luaur-common = { path = "../luaur-common", version = "0.1.7" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.7" }
luaur-config = { path = "../luaur-config", version = "0.1.7" }
luaur-vm = { path = "../luaur-vm", version = "0.1.7" }

[features]
default = ["std"]
std = []
native = ["std"]
cli = ["native"]
native-codegen = ["native"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
