[package]
name = "luaur"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Luau (Roblox's typed Lua) implemented in Rust: compiler, VM, and type checker. Umbrella crate."
keywords = ["luau", "lua", "interpreter", "compiler", "vm"]
categories = ["compilers", "emulators", "parser-implementations"]

[dependencies]
luaur-common = { path = "../luaur-common", version = "0.1.0" }
luaur-ast = { path = "../luaur-ast", version = "0.1.0" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.0" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.0" }
luaur-vm = { path = "../luaur-vm", version = "0.1.0" }
luaur-analysis = { path = "../luaur-analysis", version = "0.1.0" }
luaur-config = { path = "../luaur-config", version = "0.1.0" }
luaur-require = { path = "../luaur-require", version = "0.1.0" }
luaur-rt = { path = "../luaur-rt", version = "0.1.0" }

[features]
default = []
# Mirror luaur-rt's opt-in flags so `luaur = { features = ["serde"] }` works the
# same as depending on luaur-rt directly. async and send are mutually exclusive
# (enforced in luaur-rt).
async = ["luaur-rt/async"]
serde = ["luaur-rt/serde"]
send = ["luaur-rt/send"]
macros = ["luaur-rt/macros"]

# Not `all-features`: async and send are mutually exclusive. Document the
# async-side superset (serde + async + macros).
[package.metadata.docs.rs]
features = ["serde", "async", "macros"]
rustdoc-args = ["--cfg", "docsrs"]
