[package]
name = "luaur"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Luau (Roblox's typed Lua) implemented in Rust: compiler, VM, and type checker. Umbrella crate."
keywords = ["luau", "lua", "interpreter", "compiler", "vm"]
categories = ["compilers", "emulators", "parser-implementations"]

# The installable `luaur` binary (`cargo install luaur`) is the script runner /
# REPL, whose implementation lives in luaur-repl-cli's lib. It is optional and
# only pulled in by the `cli` feature so library-only users
# (`default-features = false`) don't compile the CLI stack (rustyline, etc.).
[[bin]]
name = "luaur"
path = "src/bin/luaur.rs"
required-features = ["cli"]

[dependencies]
luaur-common = { path = "../luaur-common", version = "0.1.0" }
luaur-ast = { path = "../luaur-ast", version = "0.1.0" }
luaur-bytecode = { path = "../luaur-bytecode", version = "0.1.0" }
luaur-compiler = { path = "../luaur-compiler", version = "0.1.0" }
luaur-vm = { path = "../luaur-vm", version = "0.1.0" }
luaur-analysis = { path = "../luaur-analysis", version = "0.1.0" }
luaur-config = { path = "../luaur-config", version = "0.1.0" }
luaur-require = { path = "../luaur-require", version = "0.1.0" }
luaur-rt = { path = "../luaur-rt", version = "0.1.0" }
luaur-repl-cli = { path = "../luaur-repl-cli", version = "0.1.0", optional = true }

[features]
# Batteries-included: the umbrella ships the static type checker AND the installable
# `luaur` CLI on by default, so `luaur::check` works out of the box and
# `cargo install luaur` produces the `luaur` script-runner/REPL with no extra flags.
# Library-only users who want a minimal build opt out with
# `default-features = false` (optionally re-adding `typecheck`).
default = ["typecheck", "cli"]
# The installable command-line binary (script runner / REPL). Pulls luaur-repl-cli.
cli = ["dep:luaur-repl-cli", "luaur-repl-cli/cli"]
# Mirror luaur-rt's opt-in flags so `luaur = { features = ["serde"] }` works the
# same as depending on luaur-rt directly. `async` and `send` compose (see
# luaur-rt's `send` feature note).
async = ["luaur-rt/async"]
serde = ["luaur-rt/serde"]
send = ["luaur-rt/send"]
macros = ["luaur-rt/macros"]
# The static type checker (forwards to luaur-rt's `typecheck`). On by default via
# `default`; named here so `default-features = false` users can opt back in.
typecheck = ["luaur-rt/typecheck"]

# Document the async-side superset (serde + async + macros) on docs.rs. (`send`
# is omitted only because the rendered docs read the same with or without it.)
[package.metadata.docs.rs]
features = ["serde", "async", "macros"]
rustdoc-args = ["--cfg", "docsrs"]
